cargo-features = ["rename-dependency"]

[package]
name = "os"
version = "0.1.0"
authors = ["Yifan Wu <shinbokuow@163.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
riscv = { git = "https://github.com/rcore-os/riscv", features = ["inline-asm"] }
lazy_static = { version = "1.4.0", features = ["spin_no_std"] }
buddy_system_allocator = "0.6"
bitflags = "1.2.1"
xmas-elf = "0.7.0"
virtio-drivers = { git = "https://github.com/rcore-os/virtio-drivers", rev = "4ee80e5" }
easy-fs = { path = "../easy-fatfs", package = "easy-fatfs" }
nvme_driver = { path = "../../nvme_driver" }
pci = { git = "https://github.com/rcore-os/pci-rs" }

device_tree = { git = "https://github.com/rcore-os/device_tree-rs", rev = "2f2e55fb" }
isomorphic_drivers = { git = "https://github.com/rcore-os/isomorphic_drivers", rev = "f7cd97a8", features = [
    "log",
] }

array-macro = "2.0.0"


[profile.release]
debug = true

[patch.crates-io]
fatfs = { git = "https://github.com/rafalh/rust-fatfs" }